# ArtistMusicProject

./: exploration.ipynb  pyproject.toml  utils.py
artist_data/: __init__.py  setup.py  utils.py
artist_data/client/: __init__.py  genius_client.py  spotify_client.py
artist_data/extract/: __init__.py  genius_extract.py  spotify_extract.py
