[tool.poetry]
name = "artist-data"
version = "0.1.0"
description = ""
authors = ["Arnaud GUEULETTE <arnaud_gueulette@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lyricsgenius = "^3.0.1"
spotipy = "^2.24.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
